--- a/SportManager.API/appsettings.json
+++ b/SportManager.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=sport_manager;Username=postgres;Password=123123"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=sport_manager;Username=postgres;Password=postgres"
   },
   "JwtSettings": {
     "SecretKey": "SportManagerSecretKeyWithAtLeast32Characters",
