--- a/SportManager.API/SportManager.API.csproj
+++ b/SportManager.API/SportManager.API.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CloudinaryDotNet" Version="1.27.6" />
     <PackageReference Include="FluentValidation" Version="11.11.0" />
 	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
 	  <PackageReference Include="JWT" Version="11.0.0" />
